@@ -1,6 +1,7 @@
 // Temporary buffer implementation -*- C++ -*-
 
-// Copyright (C) 2001, 2002, 2004, 2005 Free Software Foundation, Inc.
+// Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006 
+// Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -78,7 +79,7 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
       // concept requirements
       __glibcxx_class_requires(_ForwardIterator, _ForwardIteratorConcept)
 
-	public:
+    public:
       typedef _Tp         value_type;
       typedef value_type* pointer;
       typedef pointer     iterator;
@@ -93,8 +94,8 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
       _M_initialize_buffer(const _Tp&, __true_type) { }
 
       void
-      _M_initialize_buffer(const _Tp& val, __false_type)
-      { std::uninitialized_fill_n(_M_buffer, _M_len, val); }
+      _M_initialize_buffer(const _Tp& __val, __false_type)
+      { std::uninitialized_fill_n(_M_buffer, _M_len, __val); }
 
     public:
       /// As per Table mumble.
